# superstate

./: .gitignore  logme.md
03_optimal_test_matlab/: readme.md
03_optimal_test_matlab/1D-christophe/: PathPredict.m  Run.m  optimizer.m
03_optimal_test_matlab/1D-withoutPitch/: PathPredict.m  Run.m  optimizer.m
03_optimal_test_matlab/switch_opt/: PathPredict.m  Run.m  optimizer.m
ACADO/: README.md  blah.tar  getting_started.cpp  simplequad.cpp  simplequad.m
bangbangROS/: readme.md  tf.csv
bangbangROS/src/controllermavlab/: package.xml
bangbangROS/src/controllermavlab/src/: attitude_control.cpp
bangbangROS/src/estimation/: CMakeLists.txt
bangbangROS/src/estimation/include/: gate.h  wayPointPlan.h
bangbangROS/src/estimation/src/: gate.cpp  main.cpp  poseEstimator_node.cpp  wayPointPlan.cpp
bangbangROS/src/ransac/: package.xml
bangbangROS/src/ransac/include/: ransac.h
basic_fun/: basic_fuc.m
checkAccInnovation/: accBiases.mat  checkBias.m  checkBias2.m  optiData.m
clean/: accPlot.eps  circle_pos.eps  circle_pos_top.eps  circle_post.eps  circle_vel.eps  dragCo.csv  dragEst.m  lshape_pos.eps  lshape_pos_top.eps  lshape_post.eps  lshape_vel.eps  optiData.m  plotEverything.m  plotdragval.m  posplot2d.eps  posplot3d.eps  posplottime.eps  stEst.m  stEst_cmp.m  thrust_xparam.mat  top.eps  velPlot.eps
dragpnpROS/: dragPnP.m  logme.md  pnp_f.csv
logs/: 2019-06-20_15_30_05.csv  2019-06-20_16_21_41.csv  2019-06-24_14_59_20.csv  2019-07-03_13_26_13.csv  2019-08-16_17_58_10.csv  2019-09-02_16_01_26.csv  2019-09-02_16_10_24.csv
misc/: cmpAcc.m  kd12Feb.m  misc.m  plotDrone.m  plot_csv.m  readme.md  rotationTry.m
mpc-quadprog/: afti16.m  afti16sim.mdl  anglecmdcmp.eps  anoosh_pontyargin.m  hessianNormalquadprog2D.m  logme.md  mpc_doubleint.slxc  mpctry.m  quadprog15D.m  quadprog1D.m  quadprog2D.m  springDam.slx  topvelpro.eps
mpc-quadprog/slprj/_sfprj/EMLReport/: sQcSwUfGCtHsuG8zDAuUzk.mat
mpc-quadprog/slprj/sim/varcache/mpc_doubleint/: checksumOfCache.mat  varInfo.mat
mpcROS/: plot.csv  plotopt.csv  plotpid.csv  plottercmp.m
mpcROS/devel/: .catkin  .rosinstall  setup.sh
mpcROS/devel/include/estimation/: IRMarker.h  IRMarkerArray.h
mpcROS/devel/lib/controllermavlab/: controllermavlab_node  traj_publish_node
mpcROS/devel/lib/estimation/: estimation_node
mpcROS/devel/lib/pkgconfig/: controllermavlab.pc  estimation.pc  qpoases.pc  ransac.pc
mpcROS/devel/lib/qpoases/: example1  example1a  example1b  example2  example3  example3b  example4  example5  exampleLP  qrecipe
mpcROS/devel/share/controllermavlab/cmake/: controllermavlabConfig.cmake
mpcROS/devel/share/estimation/cmake/: estimation-msg-paths.cmake  (+1 more)
mpcROS/src/controllermavlab/: CMakeLists.txt
mpcROS/src/controllermavlab/include/: attitude_control.h  pidcontrol.h  traj.h
mpcROS/src/controllermavlab/launch/: ADR.launch  PID.launch
mpcROS/src/controllermavlab/src/: attitude_control.cpp  pidcontrol.cpp  traj2.cpp  traj_publish.cpp
mpcROS/src/estimation/: package.xml
mpcROS/src/estimation/include/: poseEstimator_node.h
mpcROS/src/estimation/msg/: IRMarkerArray.msg
mpcROS/src/qpOASES/: CMakeLists.bkp  package.xml
mpcROS/src/qpOASES/examples/: example1b.cpp
mpcROS/src/qpOASES/interfaces/python/: qpoases.cpp
mpcROS/src/ransac/: CMakeLists.txt
mpcROS/src/ransac/src/: ransac.cpp
optimalROS/: plotter.m
optimalROS/src/controllermavlab/include/: attitude_control.h
optimalROS/src/controllermavlab/launch/: ADR.launch
stateEstMain/: 12plotTop.eps  12plotpos.eps  12plotvel.eps  12whylateral.eps  accInnovation.eps  accPlot.eps  checkCoriolis.m  checkGrav.m  compensator.m  dragCo.csv  dragEst.m  optiData.m  plotDrone2.m  posPlot.eps  readDragCo.m
stateEst_proof/: accPlot.eps  checkCoriolis.m  checkGrav.m  compensator.m  posPlot.eps  thruststate.mat  top.eps  velPlot.eps
sysID/: cmpAcc.m  sysid.eps  tf.csv
thrust/: README.md  accPlot.eps  histWithoutAcc.eps  histwithAcc.eps  parz.mat  posPlot.eps  thrust.m  thrustMatch.m  thruststate2.mat  thruststate2woacc.mat  top.eps  velPlot.eps  withoutAccVelPlot.eps
thrustPred/: 2019-05-22_20_55_20.csv  2019-05-22_20_59_15.csv  getCoord.m  optiData.m  phasePlot.m  readme.md  sidestep.eps  sidestep2.eps  visual.m
yf/: Kdrag.m  imuOutput.txt  readme.md
(+16 files in other folders)
