<?xml version="1.0"?>
<package format="2">
  <name>ransac</name>
  <version>0.0.0</version>
  <description>The ransac package</description>

  <maintainer email="mavlab@todo.todo">mavlab</maintainer>

  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>roscpp</build_depend> -->
  <depend>roscpp</depend>
  <!-- Message types used -->
  <!-- <build_depend>mav_msgs</build_depend> -->
  <depend>tf2_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Libraries -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
