<?xml version="1.0"?>
<package format="2">
  <name>estimation</name>
  <version>0.0.0</version>
  <description>The estimation package</description>

  <maintainer email="mavlab@todo.todo">mavlab</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- <build_depend>roscpp</build_depend> -->
  <depend>roscpp</depend>
  <!-- Message types used -->
  <!-- <build_depend>mav_msgs</build_depend> -->
  <depend>tf2_msgs</depend>
  <depend>mav_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>

  <!-- Libraries -->
  <depend>tf2</depend>
  <depend>tf2_ros</depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>
  <build_export_depend>message_runtime</build_export_depend>


  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->

  </export>
</package>
